test/type/wrong/hr2.kk.out
test/type/wrong/hr2.kk(6, 8): error: type is not polymorphic enough
 context : auto(f)
 term : f
 inferred type : ($a) -> _e $a
 is less general than: forall<b> (b) -> _e b
 hint : give a higher-rank type annotation to a function parameter?